# fun-lang

./: .dockerignore  .gitignore  .hlint.yaml  .stylish-haskell.yaml  Dockerfile  Gopkg.toml  LICENSE.txt  README.md  Setup.hs  circle.yml  fun-parser.cabal  func.cabal  language-fun.cabal  stack.yaml
.circleci/: Dockerfile  config.yml
app/: Main.hs
cmd/func/: main.go  tools.go
cmd/gofun/: main.go
examples/: 01_hello-world.fun  01_hello_world.fun  02_values.fun  03_variables.fun  03_variables.go  04_for.fun  04_for.go  05_if_else.fun  05_if_else.go  06_switch.fun  06_switch.go  07_slices.fun  07_slices.go  08_maps.fun  08_maps.go  09_range.fun  09_range.go  10_functions.fun  10_functions.go  11_closures.fun  11_closures.go  12_pointers.fun  12_pointers.go  13_structs.fun  13_structs.go  14_methods.fun  14_methods.go  15_interfaces.fun  15_interfaces.go  for.fun  functions.fun  goroutines.fun  ifelse.fun  interfaces.fun  maps.fun  methods.fun  pointers.fun  range.fun  slices.fun  structs.fun  (+2 more)
fun/: ast.go  fun_test.go  helpers.go  printers.go  stringers.go  tokens.go  types.go
fun-parse/: main.go
fun-parse/fun/: aliases.go  types.go
fun-parse/fun/code/: code.go
fun-parse/parser/: parser.go  parser_test.go  unit_test.go
fun-parse/testing/: utils.go
fun/parse/: parse.go  parse_test.go
fun/printer/: printer.go  printer_test.go
fun/togo/: ast.go  togo_test.go
fun/tokens/: tokens.go
func/: main.go
func-parse/: Setup.hs  fun-parser.cabal  main.go
func-parse/app/: Main.hs
func-parse/fun/: aliases.go  marshal.go  tokens.go  types.go
func-parse/go/src/: fmt.go
func-parse/parser/: parser.go  parser_test.go  unit_test.go
func-parse/src/Fun/: GoPrinter.hs  Lexer.hs  Parser.hs  Sexp.hs  Types.hs
func-parse/src/Go/: Fmt.hs
func-parse/test/: Spec.hs
func-parse/testing/: utils.go
go/: parser.go  parser_test.go  test.fun
go/fun/: types.go
go/parser/: parser.go  parser_test.go  parser_unit_test.go
parse/: parse.go  parse_test.go
parse/parser/: parser.go  parser_test.go
parse/scanner/: scanner.go  scanner_test.go
parse/tokens/: tokens.go
parse/tool/: fun-parser.cabal  stack.yaml
parse/tool/app/: Main.hs
parse/tool/src/Fun/: Lexer.hs  Main.hs  Parser.hs  Types.hs
parse/tool/test/: Spec.hs
print/: printer.go  printer_test.go
src/: Fun.hs
src/Foreign/: Gofmt.hs  Parser.hs
src/Fun/: Desugar.hs  Errors.hs  GoPrinter.hs  Lexer.hs  Main.hs  Parser.hs  PrettyPrinter.hs  Printer.hs  SExpression.hs  Sexp.hs  Tokens.hs  Types.hs
src/Fun/Go/: Desugar.hs  Printer.hs
src/Go/: Fmt.hs  Parser.hs
test/: Spec.hs
test/Test/: Examples.hs  Instances.hs  Properties.hs  Utils.hs
tests/: fun_test.go  translate_test.go
translate/: translate.go  translate_test.go
