name:                func
version:             0.12.0.0-SNAPSHOT
homepage:            https://github.com/jBugman/fun-lang#readme
license:             MIT
author:              Sergey Parshukov
maintainer:          codedby@bugman.me
copyright:           2017 Sergey Parshukov
category:            Language
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends:  base >= 4.7 && < 5
                , Cabal
                , directory
                , filepath
                , process

library
  hs-source-dirs:       src
  exposed-modules:      Fun.Go.Desugar
                      , Fun.Go.Printer
                      , Fun.Lexer
                      , Fun.Main
                      , Fun.Parser
                      , Fun.Sexp
                   -- , Fun.Types
                      , Go.Fmt
  ghc-options:          -Wall -Wno-partial-type-signatures
  default-extensions:   OverloadedStrings, NoImplicitPrelude
  build-depends:        base >= 4.7 && < 5
                      , classy-prelude
                   -- , aeson
                      , containers
                      , either
                      , megaparsec
                      , split
                      , text
                      , text-format
  extra-libraries:     fungo
  default-language:    Haskell2010

-- executable func-parse
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -Wall -rtsopts
--   build-depends:       base
--                      , func
--   default-language:    Haskell2010

test-suite fun-lang-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , classy-prelude
                    , func
                    , hspec
                    , hspec-megaparsec
                    , text
  ghc-options:        -Wall -threaded -rtsopts
  default-extensions: OverloadedStrings, NoImplicitPrelude
  extra-libraries:    fungo
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/jBugman/fun-lang
