name:                language-fun
version:             0.18.3.0
homepage:            https://github.com/jBugman/fun-lang#readme
license:             MIT
author:              Sergey Parshukov
maintainer:          codedby@bugman.me
copyright:           2017 Sergey Parshukov
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Fun
                      , Fun.Desugar
                      , Fun.Errors
                      , Fun.Go.Printer
                      , Fun.Parser
                      , Fun.PrettyPrinter
                      , Fun.SExpression
                      , Go.Fmt
  other-modules:        Fun.Tokens
  build-depends:        base >= 4.7 && < 5
                      , classy-prelude
                      , containers
                      , either
                      , parsec
                      , process
                      , s-cargot
                      , split
                      , text
                      , text-format
  ghc-options:         -Wall -Wno-partial-type-signatures
  default-extensions:   OverloadedStrings, NoImplicitPrelude
  default-language:     Haskell2010

executable func
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:        base
                      , classy-prelude
                      , language-fun
                      , filepath
                      , optparse-applicative
                      , process
                      , temporary
                      , text
  default-extensions:   OverloadedStrings, NoImplicitPrelude
  default-language:     Haskell2010

test-suite fun-lang-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Test.Utils
  build-depends:        base
                      , classy-prelude
                      , language-fun
                      , either
                      , filepath
                      , hspec
                      , hspec-expectations
                      , QuickCheck
                      , s-cargot
                      , text
  ghc-options:         -Wall -threaded -rtsopts
  default-extensions:   OverloadedStrings, NoImplicitPrelude
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/jBugman/fun-lang
