name:                language-fun
version:             0.27.0.0
homepage:            https://github.com/jBugman/fun-lang#readme
license:             MIT
author:              Sergey Parshukov
maintainer:          codedby@bugman.me
copyright:           2017 Sergey Parshukov
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Fun
                      , Foreign.Gofmt
                      , Foreign.Parser
                      , Fun.Desugar
                      , Fun.Errors
                      , Fun.Go.Printer
                      , Fun.PrettyPrinter
                      , Fun.SExpression
  build-depends:        base >= 4.9 && < 5
                      , classy-prelude >= 1.2
                      , aeson >= 1.1.2
                      , either >= 4.4
                      , extra >= 1.5
                      , process >= 1.4
                      , text >= 1.2
                      , wl-pprint-text >= 1.1.1
  ghc-options:         -Wall -Wno-partial-type-signatures
  default-extensions:   OverloadedStrings, NoImplicitPrelude
  default-language:     Haskell2010

executable func
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:        base
                      , classy-prelude
                      , language-fun
                      , filepath >= 1.4
                      , optparse-applicative >= 0.13
                      , process
                      , temporary >= 1.2
                      , text
  default-extensions:   OverloadedStrings, NoImplicitPrelude
  default-language:     Haskell2010

test-suite fun-lang-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Test.Utils
  build-depends:        base >= 4.9 && < 5
                      , classy-prelude
                      , language-fun
                      , either
                      , filepath >= 1.4
                      , hspec >= 2.4.4
                      , hspec-expectations >= 0.8.2
                      , QuickCheck >= 2.9.2
                      , text
  ghc-options:         -Wall -threaded -rtsopts
  default-extensions:   OverloadedStrings, NoImplicitPrelude
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/jBugman/fun-lang
