name:                fun-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jBugman/fun-lang#readme
license:             MIT
author:              Sergey Parshukov
maintainer:          codedby@bugman.me
copyright:           2017 Sergey Parshukov
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fun.Parser
                     , Fun.Lexer
                     , Fun.Types
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1 && < 3.2
  default-language:    Haskell2010

executable func-parse
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -rtsopts
  build-depends:       base
                     , fun-parser
  default-language:    Haskell2010

test-suite fun-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fun-parser
                     , hspec >= 2.4.3 && < 2.5
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jBugman/fun-lang
